fix toc overlap of content on smaller screens
Adjust the grid so that the left navigation does not start
to overlap content when moving to smaller screens. Testing
on chrome and firefox it seems to behave consistently now.

--- a/src/main/paradox/_template/css/page.css
+++ b/src/main/paradox/_template/css/page.css
@@ -8,6 +8,7 @@
 
 #content {
   z-index: 1000;
+  min-width: 768px;
   max-width: 768px;
 }
 
